# m-obs-backend

./: .gitignore  README.md  continuous_update_state.py  force_reset_worker_state.py  update_worker_state.py
api/: .env.example  pyproject.toml
api/src/: __init__.py  config.py  database.py  main.py
api/src/models/: schemas.py
api/src/routes/: alerts.py  contracts.py  health.py  metrics.py  providers.py  transactions.py
worker/: .env.example  pyproject.toml
worker/src/: __init__.py  config.py  database.py  main.py
worker/src/decoders/: __init__.py  error_decoder.py
worker/src/pipelines/: __init__.py  alert_evaluator.py  block_scanner.py  metrics_rollup.py  provider_probe.py
worker/src/providers/: __init__.py  manager.py  rpc_client.py  scoring.py
worker/src/state/: __init__.py  worker_state.py
